objects/amc__Team_Assignment__c.object
<CustomObject>
    <description>Links a Role to a specific Team</description>
    <fields>
        <fullName>amc__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Master_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether this Team is the Master Team for this Role</inlineHelpText>
        <label>Master Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Role__c</fullName>
        <label>Role</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Team__c</fullName>
        <label>Team</label>
        <referenceTo>amc__Team__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Team Assignment</label>
    <nameField>
        <displayFormat>TA{0}</displayFormat>
        <label>Team Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>